--- a/SeleniumCookbook/SeleniumCookbook.csproj
+++ b/SeleniumCookbook/SeleniumCookbook.csproj
@@ -68,6 +68,9 @@
   <ItemGroup>
     <Folder Include="Resources\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="TaskText.txt" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
