--- a/SeleniumCookbook/SeleniumCookbook.csproj
+++ b/SeleniumCookbook/SeleniumCookbook.csproj
@@ -61,10 +61,13 @@
   <ItemGroup>
     <Compile Include="AutomatingLists.cs" />
     <Compile Include="AutomatingRadioButtons.cs" />
+    <Compile Include="CookieInfo.cs" />
+    <Compile Include="PmxProjects.cs" />
     <Compile Include="StudyingActions.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="TestOnFirefox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebDriverFeatures.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
