--- a/SeleniumCookbook/SeleniumCookbook.csproj
+++ b/SeleniumCookbook/SeleniumCookbook.csproj
@@ -35,8 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.XML" />
     <Reference Include="WebDriver, Version=2.53.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Selenium.WebDriver.2.53.1\lib\net40\WebDriver.dll</HintPath>
       <Private>True</Private>
@@ -61,6 +63,7 @@
   <ItemGroup>
     <Compile Include="AutomatingLists.cs" />
     <Compile Include="AutomatingRadioButtons.cs" />
+    <Compile Include="BMICalculatorNUnitTest.cs" />
     <Compile Include="CookieInfo.cs" />
     <Compile Include="PmxProjects.cs" />
     <Compile Include="StudyingActions.cs" />
