--- a/SeleniumCookbook/SeleniumCookbook.csproj
+++ b/SeleniumCookbook/SeleniumCookbook.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.XML" />
     <Reference Include="WebDriver, Version=2.53.1.0, Culture=neutral, processorArchitecture=MSIL">
@@ -64,6 +65,7 @@
     <Compile Include="AutomatingLists.cs" />
     <Compile Include="AutomatingRadioButtons.cs" />
     <Compile Include="BMICalculatorNUnitTest.cs" />
+    <Compile Include="BMICalculatorTests.cs" />
     <Compile Include="CookieInfo.cs" />
     <Compile Include="PmxProjects.cs" />
     <Compile Include="StudyingActions.cs" />
